# cabonledgerX

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 01_problem_statement.md  02_architecture.md  03_data_pipeline.md  04_calculator_and_history.md  05_forecasting_and_evaluation.md  06_scoring_and_reconciliation.md  07_interventions_and_mac.md  08_dashboard_and_api.md  09_innovations_and_uniqueness.md  10_future_work.md  CHANGELOG.md  DEPLOYMENT.md  INTERVIEW_PREP.md  VERIFICATION.md
docs/adr/: ADR-001-why-streamlit-and-fastapi.md  (+2 more)
docs/archive/: CarbonLedger_ScopeFreeze.md  (+1 more)
scripts/: bootstrap_check.py  build_activity_and_calculated_emissions.py  build_emissions_baseline.py  build_evidence_packs.py  build_forecast_and_assessment.py  build_historical_reconstruction.py  build_intervention_scenarios.py  build_probabilistic_scoring.py  build_processed_tables.py  build_risk_and_contradictions.py  build_scoring_reconciliation.py  build_statistical_forecast_and_evaluation.py  extract_interim_tables.py  profile_raw_data.py
tests/: test_activity_and_emissions_calculator_smoke.py  test_api_smoke.py  test_catalog_and_parsers_smoke.py  test_dashboard_smoke.py  test_emissions_baseline_smoke.py  test_evidence_packs_smoke.py  test_forecast_and_assessment_smoke.py  test_historical_reconstruction_smoke.py  test_interim_extraction_smoke.py  test_intervention_scenarios_smoke.py  test_probabilistic_scoring_smoke.py  test_processed_tables_smoke.py  test_risk_and_contradictions_smoke.py  test_scoring_reconciliation_smoke.py  test_statistical_forecast_and_evaluation_smoke.py
(+52 files in other folders)
